src/parser.ts
/*!
 * Copyright (c) 2020 Ron Buckton (rbuckton@chronicles.org)
 *
 * This file is licensed to you under the terms of the MIT License, found in the LICENSE file
 * in the root of this repository or package.
 */

import { CancelToken } from "@esfx/async-canceltoken";
import { Cancelable } from "@esfx/cancelable";
import { concat, toCancelToken } from "./core";
import { Range, TextRange } from "./types";
import { Diagnostics, DiagnosticMessages, NullDiagnosticMessages, LineMap, formatList } from "./diagnostics";
import { SyntaxKind, tokenToString, ProductionSeperatorKind, ArgumentOperatorKind, LookaheadOperatorKind, ParameterOperatorKind, TokenKind } from "./tokens";
import { Scanner } from "./scanner";
import {
    Node,
    Token,
    StringLiteral,
    SourceFile,
    UnicodeCharacterLiteral,
    Prose,
    Identifier,
    Parameter,
    ParameterList,
    OneOfList,
    Terminal,
    SymbolSet,
    Assertion,
    InvalidAssertion,
    EmptyAssertion,
    LookaheadAssertion,
    NoSymbolHereAssertion,
    LexicalGoalAssertion,
    Constraints,
    ProseAssertion,
    ProseFragmentLiteral,
    Argument,
    ArgumentList,
    Nonterminal,
    OneOfSymbol,
    LexicalSymbol,
    PlaceholderSymbol,
    InvalidSymbol,
    ButNotSymbol,
    UnicodeCharacterRange,
    SymbolSpan,
    LinkReference,
    RightHandSide,
    RightHandSideList,
    Production,
    Import,
    Define,
    MetaElement,
    SourceElement,
    PrimarySymbol,
    Trivia,
    Line,
    NumberLiteral,
    TerminalLiteral,
} from "./nodes";
import { getNodeAccessor, getSourceFileAccessor } from "./nodeInternal";

enum ParsingContext {
    SourceElements,
    Parameters,
    Arguments,
    RightHandSideListIndented,
    SymbolSet,
    OneOfList,
    OneOfListIndented,
    OneOfSymbolList,
    NoSymbolHere
}

interface ListTypes {
    [ParsingContext.SourceElements]: SourceElement;
    [ParsingContext.Parameters]: Parameter;
    [ParsingContext.Arguments]: Argument;
    [ParsingContext.RightHandSideListIndented]: RightHandSide;
    [ParsingContext.SymbolSet]: SymbolSpan;
    [ParsingContext.OneOfList]: TerminalLiteral;
    [ParsingContext.OneOfListIndented]: TerminalLiteral;
    [ParsingContext.OneOfSymbolList]: LexicalSymbol;
    [ParsingContext.NoSymbolHere]: PrimarySymbol;
}

/** {@docCategory Other} */
export interface TextChange {
    range: Range;
    text: string;
}

/** {@docCategory Other} */
export namespace TextChange {
    export function create(text: string, range: Range) {
        return { text, range };
    }

    export function clone(change: TextChange) {
        return create(change.text, Range.clone(change.range));
    }

    export function isUnchanged(change: TextChange) {
        return change.text.length === 0
            && Range.isCollapsed(change.range);
    }

    export function applyChange(originalText: string, change: TextChange) {
        if (isUnchanged(change)) {
            return originalText;
        }

        const lineMap = new LineMap(originalText);
        const pos = lineMap.offsetAt(change.range.start);
        const end = lineMap.offsetAt(change.range.end);
        return originalText.substr(0, pos) + change.text + originalText.substr(end);
    }
}

/** {@docCategory Parse} */
export class Parser {
    private scanner!: Scanner;
    /* @internal */ token!: SyntaxKind;
    private imports!: string[];
    private diagnostics!: DiagnosticMessages;
    private parsingContext!: ParsingContext;
    private cancelToken?: CancelToken;
    private trivia: Map<number, Trivia[]> | undefined;

    // TODO(rbuckton): Incremental parser
    // public updateSourceFile(sourceFile: SourceFile, change: TextChange) {
    //     if (TextChange.isUnchanged(change)) {
    //         return sourceFile;
    //     }

    //     if (sourceFile.elements.length === 0) {
    //         return this.parseSourceFile(sourceFile.filename, change.text);
    //     }

    //     const navigator = new NodeNavigator(sourceFile);
    //     navigator.moveToPosition(change.range.start);
    //     navigator.moveToSourceElement();
    //     const startPos = navigator.getNode().pos;
    //     const startOffset = navigator.getOffset();
    //     navigator.moveToPosition(change.range.end);
    //     navigator.moveToSourceElement();
    //     const endPos = navigator.getNode().end;
    //     const endOffset = navigator.getOffset();

    //     // 1) replace the text from sourceFile.text with the specified changes
    //     // 2) create a new SourceFile, copying nodes from the original source file
    //     // up to startOffset
    //     // 3) parse the new text fragment, adding nodes to the new SourceFile
    //     // 4) clone nodes from the old source file to the new source file
    //     // with new positions
    // }

    public parseSourceFile(filename: string, text: string, cancelable?: Cancelable): SourceFile {
        const cancelToken = toCancelToken(cancelable);
        cancelToken?.throwIfSignaled();
        const savedImports = this.imports;
        const savedDiagnostics = this.diagnostics;
        const savedCancellationToken = this.cancelToken;
        const savedScanner = this.scanner;
        const savedParsingContext = this.parsingContext;
        const savedTrivia = this.trivia;
        try {
            return this.parse(filename, text, /*previousSourceFile*/ undefined, /*changeRange*/ undefined, cancelToken);
        }
        finally {
            this.imports = savedImports;
            this.diagnostics = savedDiagnostics;
            this.cancelToken = savedCancellationToken;
            this.scanner = savedScanner;
            this.parsingContext = savedParsingContext;
            this.trivia = savedTrivia;
        }
    }

    private parse(filename: string, text: string, previousSourceFile: SourceFile | undefined, changeRange: TextRange | undefined, cancelToken?: CancelToken) {
        const elements: SourceElement[] = [];
        const sourceFile = new SourceFile(filename, text, elements);
        this.imports = [];
        this.diagnostics = new DiagnosticMessages();
        this.diagnostics.setSourceFile(sourceFile);
        this.cancelToken = cancelToken;
        this.parsingContext = ParsingContext.SourceElements;
        this.trivia = undefined;
        this.scanner = new Scanner(filename, text, this.diagnostics, this.cancelToken);

        this.nextToken();
        this.parseSourceElementList(elements);

        getSourceFileAccessor().setImports(sourceFile, this.imports);
        getSourceFileAccessor().setParseDiagnostics(sourceFile, this.diagnostics);

        return sourceFile;
    }

    private nextToken(): SyntaxKind {
        this.token = this.scanner.scan();
        const trivia = trimTrivia(this.scanner.getTrivia());
        if (trivia) {
            this.trivia ||= new Map<number, Trivia[]>();
            this.trivia.set(this.scanner.getStartPos(), trivia);
        }
        return this.token;
    }

    private lookahead<T>(callback: () => T): T {
        return this.speculate(callback, /*isLookahead*/ true);
    }

    // private tryParse<T>(callback: () => T): T {
    //     return this.speculate(callback, /*isLookahead*/ false);
    // }

    private speculate<T>(callback: () => T, isLookahead: boolean): T {
        const savedToken = this.token;
        const savedParsingContext = this.parsingContext;
        const savedDiagnostics = this.diagnostics;
        const savedTrivia = this.trivia;
        if (this.trivia) this.trivia = new Map(this.trivia);
        this.diagnostics = NullDiagnosticMessages.instance;
        try {
            const result = this.scanner.speculate(callback, isLookahead);
            if (!result || isLookahead) {
                this.token = savedToken;
                this.parsingContext = savedParsingContext;
                this.trivia = savedTrivia;
            }
            return result;
        }
        finally {
            this.diagnostics = savedDiagnostics;
        }
    }

    private isEOF(): boolean {
        return this.token === SyntaxKind.EndOfFileToken;
    }

    private skipUntil(isRecoveryToken: (scanner: Scanner) => boolean): void {
        while (!isRecoveryToken(this.scanner) && !this.isEOF()) {
            this.nextToken();
        }
    }

    private readTokenValue(token: SyntaxKind): string | undefined {
        if (this.token === token) {
            const text = this.scanner.getTokenValue();
            this.nextToken();
            return text;
        }

        return undefined;
    }

    private readTokenText(token: SyntaxKind): string | undefined {
        if (this.token === token) {
            const text = this.scanner.getTokenText();
            this.nextToken();
            return text;
        }

        return undefined;
    }

    private finishNode<TNode extends Node>(node: TNode, fullStart: number): TNode {
        if (node) {
            getNodeAccessor().setTextRange(node, fullStart, this.scanner.getStartPos());
            if (this.trivia) {
                attachTrivia(node, this.trivia.get(node.pos), this.trivia.get(node.end), this.scanner.hasPrecedingLineTerminator());
            }
            promoteTrivia(node, node.firstChild, node.lastChild);
        }
        return node;
    }

    private parseToken<TKind extends TokenKind>(token: TKind): Token<TKind> | undefined {
        if (this.token === token) {
            const fullStart = this.scanner.getStartPos();
            this.nextToken();
            return this.finishNode(new Token(token), fullStart);
        }

        return undefined;
    }

    private parseAnyToken<TKind extends TokenKind>(predicate: (token: SyntaxKind) => token is TKind): Token<TKind> | undefined {
        const token = this.token;
        if (predicate(token)) {
            const fullStart = this.scanner.getStartPos();
            this.nextToken();
            return this.finishNode(new Token(token), fullStart);
        }

        return undefined;
    }

    private parseOptional(token: SyntaxKind): boolean {
        if (this.token === token) {
            this.nextToken();
            return true;
        }
        else {
            return false;
        }
    }

    // list parsing
    private isStartOfListElement(): boolean {
        switch (this.parsingContext) {
            case ParsingContext.SourceElements:
                return this.isStartOfSourceElement();

            case ParsingContext.Parameters:
                return this.isStartOfParameter();

            case ParsingContext.Arguments:
                return this.isStartOfArgument();

            case ParsingContext.RightHandSideListIndented:
                return this.isStartOfRightHandSide();

            case ParsingContext.SymbolSet:
                return this.token === SyntaxKind.TerminalLiteral || this.token === SyntaxKind.Identifier || this.token === SyntaxKind.UnicodeCharacterLiteral;

            case ParsingContext.OneOfList:
            case ParsingContext.OneOfListIndented:
                return this.token === SyntaxKind.TerminalLiteral || this.token === SyntaxKind.UnicodeCharacterLiteral;

            case ParsingContext.OneOfSymbolList:
                return this.token === SyntaxKind.TerminalLiteral || this.token === SyntaxKind.Identifier || this.token === SyntaxKind.UnicodeCharacterLiteral;

            case ParsingContext.NoSymbolHere:
                return this.token === SyntaxKind.TerminalLiteral || this.token === SyntaxKind.Identifier || this.token === SyntaxKind.UnicodeCharacterLiteral;

            default:
                return false;
        }
    }

    private parseElement<TParsingContext extends ParsingContext>(listContext: TParsingContext): ListTypes[TParsingContext] | undefined;
    private parseElement(listContext: ParsingContext): ListTypes[ParsingContext] | undefined {
        switch (listContext) {
            case ParsingContext.SourceElements:
                return this.parseSourceElement();

            case ParsingContext.Parameters:
                return this.parseParameter();

            case ParsingContext.Arguments:
                return this.parseArgument();

            case ParsingContext.RightHandSideListIndented:
                return this.parseRightHandSide();

            case ParsingContext.SymbolSet:
                return this.parseSymbolSpan();

            case ParsingContext.OneOfList:
            case ParsingContext.OneOfListIndented:
                return this.parseTerminalLiteral();

            case ParsingContext.OneOfSymbolList:
            case ParsingContext.NoSymbolHere:
                return this.parsePrimarySymbol(/*allowOptional*/ false);

            default:
                console.error(`Unexpected parsing context: ${this.parsingContext}`);
                return undefined;
        }
    }

    private recover(): void {
        switch (this.parsingContext) {
            case ParsingContext.SourceElements:
                this.skipUntil(isSourceElementsRecoveryToken);
                break;

            case ParsingContext.Parameters:
                this.skipUntil(isAnyParametersRecoveryToken);
                break;

            case ParsingContext.Arguments:
                this.skipUntil(isAnyArgumentsRecoveryToken);
                break;

            case ParsingContext.RightHandSideListIndented:
                this.skipUntil(isRightHandSideListIndentedRecoveryToken);
                break;

            case ParsingContext.SymbolSet:
                this.skipUntil(isSymbolSetRecoveryToken);
                break;

            case ParsingContext.OneOfList:
                this.skipUntil(isOneOfListRecoveryToken);
                break;

            case ParsingContext.OneOfListIndented:
                this.skipUntil(isOneOfListIndentedRecoveryToken);
                break;

            case ParsingContext.OneOfSymbolList:
                this.skipUntil(isOneOfSymbolListRecoveryToken);
                break;

            case ParsingContext.NoSymbolHere:
                this.skipUntil(isNoSymbolHereRecoveryToken);
                break;
        }
    }

    private reportDiagnostics(): void {
        switch (this.parsingContext) {
            case ParsingContext.SourceElements:
                this.diagnostics.report(this.scanner.getTokenPos(), Diagnostics.Production_expected);
                break;

            case ParsingContext.Parameters:
            case ParsingContext.Arguments:
                this.diagnostics.report(this.scanner.getTokenPos(), Diagnostics._0_expected, formatList([SyntaxKind.CommaToken, SyntaxKind.CloseBracketToken]));
                break;

            case ParsingContext.SymbolSet:
                this.diagnostics.report(this.scanner.getTokenPos(), Diagnostics._0_expected, formatList([SyntaxKind.CommaToken, SyntaxKind.CloseBraceToken]));
                break;

            case ParsingContext.OneOfList:
                this.diagnostics.report(this.scanner.getTokenPos(), Diagnostics._0_expected, formatList([SyntaxKind.TerminalLiteral, "«line terminator»"]));
                break;

            case ParsingContext.OneOfListIndented:
                this.diagnostics.report(this.scanner.getTokenPos(), Diagnostics._0_expected, formatList([SyntaxKind.TerminalLiteral, "«dedent»"]));
                break;

            case ParsingContext.RightHandSideListIndented:
                this.diagnostics.report(this.scanner.getTokenPos(), Diagnostics.Production_expected);
                break;
        }
    }

    private tryStopParsingList() {
        switch (this.parsingContext) {
            case ParsingContext.SourceElements:
                return this.token === SyntaxKind.EndOfFileToken;

            case ParsingContext.Parameters:
            case ParsingContext.Arguments:
                return this.token === SyntaxKind.CloseBracketToken;

            case ParsingContext.RightHandSideListIndented:
                return this.token === SyntaxKind.EndOfFileToken
                    || this.scanner.hasPrecedingDedent()
                    || this.scanner.hasPrecedingBlankLine();

            case ParsingContext.SymbolSet:
                return this.token === SyntaxKind.CloseBraceToken;

            case ParsingContext.OneOfList:
                return this.token === SyntaxKind.EndOfFileToken
                    || this.scanner.hasPrecedingLineTerminator();

            case ParsingContext.OneOfListIndented:
                // OneOfListIndented does not consume the closing token
                return this.token === SyntaxKind.EndOfFileToken
                    || this.scanner.hasPrecedingDedent()
                    || this.scanner.hasPrecedingBlankLine();

            case ParsingContext.OneOfSymbolList:
                return this.token !== SyntaxKind.OrKeyword;

            case ParsingContext.NoSymbolHere:
                // NoSymbolHere does not consume the closing token
                return this.token === SyntaxKind.HereKeyword;

            default:
                return failUnhandled(this.parsingContext);
        }
    }

    private tryMoveToNextElement(parsedPreviousElement: boolean) {
        switch (this.parsingContext) {
            case ParsingContext.Parameters:
            case ParsingContext.Arguments:
            case ParsingContext.SymbolSet:
                return this.parseOptional(SyntaxKind.CommaToken);

            case ParsingContext.OneOfSymbolList:
            case ParsingContext.NoSymbolHere:
                return this.parseOptional(SyntaxKind.OrKeyword);

            case ParsingContext.SourceElements:
            case ParsingContext.OneOfList:
            case ParsingContext.OneOfListIndented:
            case ParsingContext.RightHandSideListIndented:
                return parsedPreviousElement;

            default:
                return failUnhandled(this.parsingContext);
        }
    }

    private parseList<TParsingContext extends ParsingContext>(listContext: TParsingContext, result?: ListTypes[TParsingContext][]): ListTypes[TParsingContext][] | undefined {
        const saveContext = this.parsingContext;
        this.parsingContext = listContext;
        while (!this.isEOF()) {
            this.cancelToken?.throwIfSignaled();

            let parsed = false;
            if (this.isStartOfListElement()) {
                parsed = true;
                if (!result) {
                    result = [];
                }

                const element = this.parseElement(listContext);
                if (element) {
                    result.push(element);
                }
                else {
                    this.recover();
                }
            }

            if (this.tryStopParsingList()) break;
            if (!this.tryMoveToNextElement(parsed)) {
                const startPos = this.scanner.getStartPos();
                this.reportDiagnostics();
                this.recover();
                if (this.scanner.getStartPos() === startPos) throw new Error("Recovery failed to advance.");
            }
        }

        this.parsingContext = saveContext;
        return result;
    }

    private canBeIdentifier(kind: SyntaxKind): boolean {
        if (kind === SyntaxKind.Identifier) {
            return true;
        }

        return kind >= SyntaxKind.FirstKeyword && kind <= SyntaxKind.LastKeyword;
    }

    private parseIdentifier(): Identifier {
        const fullStart = this.scanner.getStartPos();
        const text = this.canBeIdentifier(this.token) ? this.readTokenValue(this.token) : undefined;
        const node = new Identifier(text);
        return this.finishNode(node, fullStart);
    }

    private parseUnicodeCharacterLiteral(): UnicodeCharacterLiteral {
        const fullStart = this.scanner.getStartPos();
        const text = this.readTokenText(SyntaxKind.UnicodeCharacterLiteral);
        const node = new UnicodeCharacterLiteral(text);
        return this.finishNode(node, fullStart);
    }

    private parseProse(greaterThanToken: Token<SyntaxKind.GreaterThanToken>): Prose {
        const fragments = this.parseProseFragments();
        const node = new Prose(greaterThanToken, fragments);
        this.finishNode(node, greaterThanToken.pos);
        return node;
    }

    private isStartOfParameter(): boolean {
        return this.canBeIdentifier(this.token);
    }

    private parseParameter(): Parameter {
        const fullStart = this.scanner.getStartPos();
        const name = this.parseIdentifier();
        const node = new Parameter(name);
        return this.finishNode(node, fullStart);
    }

    private parseParameterListTail(openToken: Token<SyntaxKind.OpenBracketToken>, parsingContext: ParsingContext.Parameters, closeTokenKind: SyntaxKind.CloseBracketToken): ParameterList {
        const elements = this.parseList(parsingContext);
        const closeToken = this.parseToken(closeTokenKind);
        const node = new ParameterList(openToken, elements, closeToken);
        return this.finishNode(node, openToken.pos);
    }

    private tryParseParameterList(): ParameterList | undefined {
        const openBracketToken = this.parseToken(SyntaxKind.OpenBracketToken);
        if (openBracketToken) {
            return this.parseParameterListTail(openBracketToken, ParsingContext.Parameters, SyntaxKind.CloseBracketToken);
        }

        return undefined;
    }

    private parseOneOfList(oneKeyword: Token<SyntaxKind.OneKeyword>): OneOfList {
        const ofKeyword = this.parseToken(SyntaxKind.OfKeyword);
        const indented = this.scanner.hasPrecedingIndent();
        const terminals = this.parseList(indented ? ParsingContext.OneOfListIndented : ParsingContext.OneOfList);
        if (indented && !this.scanner.hasPrecedingDedent()) {
            this.diagnostics.report(this.scanner.getTokenPos(), Diagnostics._0_expected, "«dedent»");
        }
        const node = new OneOfList(oneKeyword, ofKeyword, indented, terminals);
        return this.finishNode(node, oneKeyword.pos);
    }

    private parseSymbolSetTail(openBraceToken: Token<SyntaxKind.OpenBraceToken>): SymbolSet {
        const terminals = this.parseList(ParsingContext.SymbolSet);
        const closeBraceToken = this.parseToken(SyntaxKind.CloseBraceToken);
        const node = new SymbolSet(openBraceToken, terminals, closeBraceToken);
        return this.finishNode(node, openBraceToken.pos);
    }

    private parseSymbolSpanRestOrSymbolSet(): SymbolSpan | SymbolSet {
        const openBraceToken = this.parseToken(SyntaxKind.OpenBraceToken);
        if (openBraceToken) {
            return this.parseSymbolSetTail(openBraceToken);
        }
        else {
            return this.parseSymbolSpanRest();
        }
    }

    private parseEmptyAssertionTail(openBracketToken: Token<SyntaxKind.OpenBracketToken>, emptyKeyword: Token<SyntaxKind.EmptyKeyword>): EmptyAssertion {
        const closeBracketToken = this.parseToken(SyntaxKind.CloseBracketToken);
        const node = new EmptyAssertion(openBracketToken, emptyKeyword, closeBracketToken);
        return this.finishNode(node, openBracketToken.pos);
    }

    private parseLookaheadAssertionTail(openBracketToken: Token<SyntaxKind.OpenBracketToken>, lookaheadKeyword: Token<SyntaxKind.LookaheadKeyword>): LookaheadAssertion {
        const operatorToken = this.parseAnyToken(isLookaheadOperatorToken);
        const lookahead = this.parseSymbolSpanRestOrSymbolSet();
        const closeBracketToken = this.parseToken(SyntaxKind.CloseBracketToken);
        const node = new LookaheadAssertion(openBracketToken, lookaheadKeyword, operatorToken, lookahead, closeBracketToken);
        return this.finishNode(node, openBracketToken.pos);
    }

    private parseNoSymbolHereAssertionTail(openBracketToken: Token<SyntaxKind.OpenBracketToken>, noKeyword: Token<SyntaxKind.NoKeyword>): NoSymbolHereAssertion {
        const symbols = this.parseList(ParsingContext.NoSymbolHere);
        const hereKeyword = this.parseToken(SyntaxKind.HereKeyword);
        const closeBracketToken = this.parseToken(SyntaxKind.CloseBracketToken);
        const node = new NoSymbolHereAssertion(openBracketToken, noKeyword, symbols, hereKeyword, closeBracketToken);
        return this.finishNode(node, openBracketToken.pos);
    }

    private parseLexicalGoalAssertionTail(openBracketToken: Token<SyntaxKind.OpenBracketToken>, lexicalKeyword: Token<SyntaxKind.LexicalKeyword>): LexicalGoalAssertion {
        const goalKeyword = this.parseToken(SyntaxKind.GoalKeyword);
        const symbol = this.parseIdentifier();
        const closeBracketToken = this.parseToken(SyntaxKind.CloseBracketToken);
        const node = new LexicalGoalAssertion(openBracketToken, lexicalKeyword, goalKeyword, symbol, closeBracketToken);
        return this.finishNode(node, openBracketToken.pos);
    }

    private parseInvalidAssertionTail(openBracketToken: Token<SyntaxKind.OpenBracketToken>): Assertion {
        this.skipUntil(isInvalidConstraintTailRecoveryToken);
        const closeBracketToken = this.parseToken(SyntaxKind.CloseBracketToken);
        const node = new InvalidAssertion(openBracketToken, closeBracketToken);
        return this.finishNode(node, openBracketToken.pos);
    }

    private parseAssertion(openBracketToken: Token<SyntaxKind.OpenBracketToken>): Assertion {
        const emptyKeyword = this.parseToken(SyntaxKind.EmptyKeyword);
        if (emptyKeyword) {
            return this.parseEmptyAssertionTail(openBracketToken, emptyKeyword);
        }

        const lookaheadKeyword = this.parseToken(SyntaxKind.LookaheadKeyword);
        if (lookaheadKeyword) {
            return this.parseLookaheadAssertionTail(openBracketToken, lookaheadKeyword);
        }

        const noKeyword = this.parseToken(SyntaxKind.NoKeyword);
        if (noKeyword) {
            return this.parseNoSymbolHereAssertionTail(openBracketToken, noKeyword);
        }

        const lexicalKeyword = this.parseToken(SyntaxKind.LexicalKeyword);
        if (lexicalKeyword) {
            return this.parseLexicalGoalAssertionTail(openBracketToken, lexicalKeyword);
        }

        return this.parseInvalidAssertionTail(openBracketToken);
    }

    private parseProseAssertion(openBracketToken: Token<SyntaxKind.OpenBracketGreaterThanToken>): ProseAssertion {
        const fragments = this.parseProseFragments();
        const closeBracketToken = this.parseToken(SyntaxKind.CloseBracketToken);
        const node = new ProseAssertion(openBracketToken, fragments, closeBracketToken);
        return this.finishNode(node, openBracketToken.pos);
    }

    private parseProseFragments() {
        let fragments: (ProseFragmentLiteral | Terminal | Nonterminal)[] | undefined;
        while (this.token) {
            if (this.token === SyntaxKind.ProseFull) {
                if (!fragments) fragments = [];
                fragments.push(this.parseProseFragmentLiteral(this.token));
                break;
            }
            else if (this.token >= SyntaxKind.FirstProseFragmentLiteral && this.token <= SyntaxKind.LastProseFragmentLiteral) {
                if (!fragments) fragments = [];
                fragments.push(this.parseProseFragmentLiteral(this.token));
            }
            else if (this.token === SyntaxKind.TerminalLiteral) {
                if (!fragments) fragments = [];
                fragments.push(this.parseTerminal(/*allowOptional*/ false));
            }
            else if (this.token === SyntaxKind.Identifier) {
                if (!fragments) fragments = [];
                fragments.push(this.parseNonterminal(/*allowArgumentList*/ false, /*allowOptional*/ false));
            }
            else if (this.token === SyntaxKind.TestCheckPointKeyword) {
                if (!fragments) fragments = [];
                fragments.push(this.parseNonterminal(/*allowArgumentList*/ false, /*allowOptional*/ false));
            }
            else {
                break;
            }
        }

        return fragments;
    }

    private parseProseFragmentLiteral(token: SyntaxKind) {
        const fullStart = this.scanner.getStartPos();
        const text = this.readTokenValue(token);
        const node = new ProseFragmentLiteral(token, text);
        return this.finishNode(node, fullStart);
    }

    private parseTerminalLiteral(): TerminalLiteral {
        const fullStart = this.scanner.getStartPos();
        const text = this.readTokenValue(SyntaxKind.TerminalLiteral);
        const node = new TerminalLiteral(text);
        return this.finishNode(node, fullStart);
    }

    private parseTerminal(allowOptional: boolean): Terminal {
        const fullStart = this.scanner.getStartPos();
        const literal = this.parseTerminalLiteral();
        const questionToken = allowOptional ? this.parseToken(SyntaxKind.QuestionToken) : undefined;
        const node = new Terminal(literal, questionToken);
        return this.finishNode(node, fullStart);
    }

    private isStartOfArgument(): boolean {
        return isLeadingArgumentToken(this.token)
            || this.canBeIdentifier(this.token);
    }

    private parseArgument(): Argument {
        const fullStart = this.scanner.getStartPos();
        const operatorToken = this.parseAnyToken(isLeadingArgumentToken);
        const name = this.parseIdentifier();
        const node = new Argument(operatorToken, name);
        return this.finishNode(node, fullStart);
    }

    private parseArgumentListTail(openToken: Token<SyntaxKind.OpenBracketToken>, parsingContext: ParsingContext.Arguments, closeTokenKind: SyntaxKind.CloseBracketToken): ArgumentList {
        const elements = this.parseList(parsingContext);
        const closeToken = this.parseToken(closeTokenKind);
        const node = new ArgumentList(openToken, elements, closeToken);
        this.finishNode(node, openToken.pos);
        return node;
    }

    private tryParseArgumentList(): ArgumentList | undefined {
        if (this.scanner.hasPrecedingLineTerminator() && !this.scanner.isLineContinuation()) return undefined;
        if (this.isStartOfArgumentList()) {
            const openBracketToken = this.parseToken(SyntaxKind.OpenBracketToken);
            if (openBracketToken) {
                return this.parseArgumentListTail(openBracketToken, ParsingContext.Arguments, SyntaxKind.CloseBracketToken);
            }
        }

        return undefined;
    }

    private isStartOfArgumentList(): boolean {
        if (this.token === SyntaxKind.OpenBracketToken) {
            return this.lookahead(() => this.nextTokenIsArgument());
        }

        return false;
    }

    private nextTokenIsArgument(): boolean {
        this.nextToken();
        return isLeadingArgumentToken(this.token)
            || this.token === SyntaxKind.Identifier;
    }

    private parseNonterminal(allowArgumentList: boolean, allowOptional: boolean): Nonterminal {
        const fullStart = this.scanner.getStartPos();
        const name = this.parseIdentifier();
        const argumentList = allowArgumentList ? this.tryParseArgumentList() : undefined;
        const questionToken = allowOptional ? this.parseToken(SyntaxKind.QuestionToken) : undefined;
        const node = new Nonterminal(name, argumentList, questionToken);
        return this.finishNode(node, fullStart);
    }

    private parseOneOfSymbol(oneKeyword: Token<SyntaxKind.OneKeyword>): OneOfSymbol {
        const ofKeyword = this.parseToken(SyntaxKind.OfKeyword);
        const symbols = this.parseList(ParsingContext.OneOfSymbolList);
        const node = new OneOfSymbol(oneKeyword, ofKeyword, symbols);
        this.finishNode(node, oneKeyword.pos);
        return node;
    }

    private parsePlaceholderSymbol(placeholderToken: Token<SyntaxKind.AtToken>): LexicalSymbol {
        const node = new PlaceholderSymbol(placeholderToken);
        this.finishNode(node, placeholderToken.pos);
        return node;
    }

    private parseInvalidSymbol(): LexicalSymbol {
        const fullStart = this.scanner.getStartPos();
        const node = new InvalidSymbol();
        this.skipUntil(isInvalidSymbolRecoveryToken);
